--- a/configs/extended_academic_config.json
+++ b/configs/extended_academic_config.json
@@ -1,7 +1,7 @@
 {
   "experiment_info": {
     "name": "neuromode_academic_extended",
-    "description": "Configuration académique étendue avec profils biologiques consolidés",
+    "description": "Configuration étendue avec profils biologiques consolidés",
     "version": "2.0.0",
     "biological_validation": true,
     "total_conditions": 90000,
